--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <!-- <li><a href="nos_projets.html">Nos projets</a></li> -->
             <li><a href="prestation.html">Prestations</a></li>
             <li><a href="tarif.html">Nos tarifs</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <!-- <li><a href="contact.html">Contact</a></li> -->
         </ul>
     </nav>
 </header>
